--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "password-validator": "^4.1.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
